Adding a base tag to the HTML head template to hopefully make links work better in the testing and training sites

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -8,6 +8,8 @@
     2000, PDF, TIFF, UTF-8, WAVE, XML, XMP, Adobe, ISO, ANSI, IETF, RFC">
     <title>JHOVE | {{ page.title }}</title>
 
+    <base href="/jhove-docs-training/">
+
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
